# ov5647-uvc-webcam-esp32p4

./: .gitignore  CMakeLists.txt  README.md  app_config.json  cam_server.py  capture.py  check_cam.sh  sdkconfig.defaults  view_webcam.py
main/: CMakeLists.txt  camera_pipeline.c  camera_pipeline.h  idf_component.yml  main.c  uvc_stream.c  uvc_stream.h
